# blank_encrypt

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
experiment/: PRNCode.py
lib/: CMakeLists.txt
script/: batch_proc.py  mvtorecycle.py
src/: CMakeLists.txt
src/BINARY_LAYER/: CMakeLists.txt  north_interface.cpp  north_interface.hpp  prn_scrambling.cc  prn_scrambling.hpp  south_interface.cc  south_interface.hpp
src/ENCODING_LAYER/: CMakeLists.txt  ascii_endec.cc  ascii_endec.hpp  utf8_decode.cpp  utf8_decode.hpp  utf8_encode.cpp  utf8_encode.hpp
src/IO_INTERFACE/: CMakeLists.txt  io_interface.cc  io_interface.hpp
src/product/: Makefile  ascii_prn.cc  ascii_prn.hpp  utf8_prn.cpp  utf8_prn.hpp
test/: inputfile.txt  outCn.txt  testCn.txt
test/decrypted/: testout.txt
test/encrypted/: outCn.txt  outputfile.txt
test/message/: inputfile.txt
